--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+## neo4j 配置项
+#spring.data.neo4j.uri=http://neo4j:tanrui@10.60.42.201:7474
+#spring.data.neo4j.username=neo4j
+#spring.data.neo4j.password=tanrui
